# InsurancePolicyChatbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  EDA.ipynb  EDA_v2.ipynb  Full_Pipeline.ipynb  Full_Pipeline_Agents.ipynb  Full_Pipeline_Agents_Pruebas.ipynb  InsurancePolicy.ipynb  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: chatbot-app.yml  pep8_streaming_pipeline.yml
app/: main.py  requirements.txt
app/chroma/: chroma-collections.parquet
app/src/: config.py  sidebar.py
app/src/agent/: llm_agent.py  vector_store.py
app/src/agent/tools/: google_search.py  retriever_qa.py
chroma/: chroma.sqlite3
demo_app/: main.py
demo_app/chroma/index/: index_metadata_e77be7a1-ddaf-4e9c-9e53-438093f9ad83.pkl  uuid_to_id_e77be7a1-ddaf-4e9c-9e53-438093f9ad83.pkl
demo_app/src/: config.py
demo_app/src/agent/: llm_agent.py  memory.py  retriever.py  web_search.py
notebook/: agent_full_pipeline.ipynb  explore_dataset.ipynb  requirements.txt
notebook/chroma/index/: id_to_uuid_e77be7a1-ddaf-4e9c-9e53-438093f9ad83.pkl
notebook/chroma/v2_512-cs/eec86776-8b53-4c69-805c-c65ac1cf175d/: index_metadata.pickle
notebook/src/: custom_qa_generate_chain.py
notebooks/: .env.example  agent_full_pipeline.ipynb  explore_dataset.ipynb
src/: ETL.py  config.py  extract.py  text_normalizer.py
