[tool.poetry]
name = "policy-pro-chat-app"
version = "1.0"
description = "An LLM based agent called Policy Pro, designed to help you with your legal queries from insurance policies."
authors = ["Alem Karina, Angelina Garnica, Miguel Socorro, Alvaro G. Ojeda"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.312"
openai = "^0.27.7"
streamlit = "^1.24.0"
chromadb = "^0.3.29"
google-api-python-client = "^2.22.0"
python-dotenv = "^0.19.1"
lark = "^1.1.7"
tiktoken = "^0.5.1"
black = "^23.9.1"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"